--- a/app/assets/stylesheets/materials.scss
+++ b/app/assets/stylesheets/materials.scss
@@ -18,8 +18,3 @@
 .list-group-item-heading a{
   text-align: left;
 }
-
-// Bootstrap's row
-.row {
-  margin: 10px 0px 10px 0px;
-}
